k8s/frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hu-observability
  labels:
    app.kubernetes.io/part-of: hu-observability
